--- a/spring-petclinic.yml
+++ b/spring-petclinic.yml
@@ -2,6 +2,10 @@
 name: petclinic
 
 releases:
+- name: "pxc"
+  version: "0.31.0"
+  url: "https://bosh.io/d/github.com/cloudfoundry-incubator/pxc-release?v=0.31.0"
+  sha1: "d85b843d3e6e20711a6ca270eb62bad6a16bd22d"
 - name: "bpm"
   version: "1.1.9"
   url: "https://bosh.io/d/github.com/cloudfoundry/bpm-release?v=1.1.9"
@@ -9,6 +13,12 @@ releases:
 - name: spring-petclinic
   version: create
   url: file://.
+
+addons:
+- name: bpm
+  jobs:
+  - name: bpm
+    release: bpm
 
 stemcells:
 - alias: default
@@ -22,17 +32,77 @@ update:
   update_watch_time: 5000-60000
 
 instance_groups:
+- name: mysql
+  instances: 1
+  azs: [z1]
+  networks: [{name: default}]
+  vm_type: default
+  stemcell: default
+  persistent_disk: 10_240
+  jobs:
+  - name: pxc-mysql
+    release: pxc
+    properties:
+      admin_password: ((mysql_admin_password))
+      tls:
+        galera: ((galera_server_certificate))
+        server: ((mysql_server_certificate))
+      seeded_databases:
+        - name: &petclinic_db petclinic
+          username: &petclinic_db_username petclinic
+          password: ((petclinic_db_password))
+    provides:
+      mysql: {as: db_conn}
+  - name: smoke-tests
+    release: pxc
+    properties:
+      db_password: ((smoke_tests_db_password))
+  - name: smoke-tests-user
+    release: pxc
+
 - name: petclinic
   azs: [z1]
   instances: 1
   jobs:
-  - name: bpm
-    release: bpm
   - name: spring-petclinic
     release: spring-petclinic
-    properties: {}
+    properties:
+      db:
+        name: *petclinic_db
+        username: *petclinic_db_username
+        password: ((petclinic_db_password))
   vm_type: default
   stemcell: default
-  persistent_disk: 10240
-  networks:
-  - name: default
+  persistent_disk: 10_240
+  networks: [{name: default}]
+  consumes:
+    db: {from: db_conn}
+
+variables:
+- name: mysql_admin_password
+  type: password
+- name: pxc_galera_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: pxc_galera_ca
+- name: pxc_server_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: pxc_server_ca
+- name: galera_server_certificate
+  type: certificate
+  options:
+    ca: pxc_galera_ca
+    extended_key_usage: [ "server_auth", "client_auth" ]
+    common_name: galera_server_certificate
+- name: mysql_server_certificate
+  type: certificate
+  options:
+    ca: pxc_server_ca
+    common_name: mysql_server_certificate
+- name: smoke_tests_db_password
+  type: password
+- name: petclinic_db_password
+  type: password
