Add java 11 as a runtime option
add missing index

--- a/spring-petclinic.yml
+++ b/spring-petclinic.yml
@@ -67,6 +67,7 @@ instance_groups:
   - name: spring-petclinic
     release: spring-petclinic
     properties:
+      jre: 8
       db:
         name: *petclinic_db
         username: *petclinic_db_username
